--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,3 +23,14 @@ jobs:
     - run: npm test
       env:
         DB_URL: ${{ secrets.DB_URL }}
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: (build)
+    steps:
+      - uses: actions/checkout@v2
+      - uses: akhileshns/heroku-deploy@v3.13.15 # This is the action
+        with:
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: "devlabs-portfolio-backend"
+          heroku_email: "ishanhansakasilva@gmail.com"
