--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,31 +2,31 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ['main']
   pull_request:
-    branches: [ "main" ]
+    branches: ['main']
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Use Node.js 21
-      uses: actions/setup-node@v4
-      with:
-        node-version: 21
-        cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
-      env:
-        DB_URL: ${{ secrets.DB_URL }}
-        TEST_DB_URL: ${{ secrets.TEST_DB_URL }}
-        ADMIN_PSSWD: ${{ secrets.ADMIN_PSSWD }}
-        SPREADSHEET_ID: ${{ secrets.SPREADSHEET_ID }}
-        GOOGLE_SHEET_CREDENTIALS: ${{ secrets.GOOGLE_SHEET_CREDENTIALS }}
-        GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+      - uses: actions/checkout@v4
+      - name: Use Node.js 21
+        uses: actions/setup-node@v4
+        with:
+          node-version: 21
+          cache: 'npm'
+      - run: npm ci
+      - run: npm run build --if-present
+      - run: npm test
+        env:
+          DB_URL: ${{ secrets.DB_URL }}
+          TEST_DB_URL: ${{ secrets.TEST_DB_URL }}
+          ADMIN_PSSWD: ${{ secrets.ADMIN_PSSWD }}
+          SPREADSHEET_ID: ${{ secrets.SPREADSHEET_ID }}
+          GOOGLE_SHEET_CREDENTIALS: ${{ secrets.GOOGLE_SHEET_CREDENTIALS }}
+          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
   deploy:
     runs-on: ubuntu-latest
     needs: build
@@ -35,5 +35,5 @@ jobs:
       - uses: akhileshns/heroku-deploy@v3.13.15
         with:
           heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
-          heroku_app_name: "devlabs-portfolio-backend"
-          heroku_email: "ishanhansakasilva@gmail.com"
+          heroku_app_name: 'devlabs-portfolio-backend'
+          heroku_email: 'ishanhansakasilva@gmail.com'
